# caesar_cryptography

./: Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.streamlit/: config.toml
data/: cleaner.ipynb  en  words.csv
dev/: pyproject.toml  requirements.txt
src/: Encode.py
src/.streamlit/: config.toml
src/pages/: AI_Decoder_(Alpha).py  example.py  🔓_Decode.py
