[tool.poetry]
name = "pyCaesar"
version = "1.0.0"
description = "A caesar cipher web application with encryption and decryption options"
authors = ["Siddhesh Agarwal <siddhesh.agarwal@gmail.com>"]
license = "GNU General Public License v2.0"

[tool.poetry.dependencies]
python = "^3.6"
streamlit = "1.10.0"

[tool.poetry.dev-dependencies]
black = "22.3.0"
isort = "5.10.1"
poetry = "1.1.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
